--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <version.fabric8.plugin>4.2.0</version.fabric8.plugin>
     <version.fabric8.docker-plugin>0.30.0</version.fabric8.docker-plugin>
     <surefire.forkCount>1</surefire.forkCount>
-    <version.hibernate.validator>6.0.17.Final</version.hibernate.validator>
+    <version.org.hibernate.validator>6.0.18.Final</version.org.hibernate.validator>
     <version.javax.el>3.0.1-b08</version.javax.el>
     <version.javax.ws.rs>2.0.0.Final</version.javax.ws.rs>
     <version.junit>4.12</version.junit>
@@ -31,14 +31,13 @@
     <version.logback.kafka.appender>0.2.0-RC2</version.logback.kafka.appender>
     <version.servlet>2.0.0.Final</version.servlet>
     <version.slf4j>1.7.26</version.slf4j>
-    <version.org.springframework>5.1.3.RELEASE</version.org.springframework>
-    <version.org.spring-boot>2.1.1.RELEASE</version.org.spring-boot>
     <version.validation.api>2.0.1.Final</version.validation.api>
   </properties>
 
   <modules>
     <module>ha-remote</module>
     <module>ha-core</module>
+    <module>ha-core-infra</module>
     <module>springboot</module>
     <module>jdkhttp</module>
     <module>sample-hacep-project</module>
@@ -136,7 +135,7 @@
         <!-- Spring Boot -->
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>${version.org.spring-boot}</version>
+        <version>${version.org.springframework.boot}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -144,7 +143,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
-        <version>${version.org.spring-boot}</version>
+        <version>${version.org.springframework.boot}</version>
         <exclusions>
           <exclusion>
             <groupId>org.springframework</groupId>
@@ -156,7 +155,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-logging</artifactId>
-        <version>${version.org.spring-boot}</version>
+        <version>${version.org.springframework.boot}</version>
       </dependency>
 
       <!-- Validation used by fabric8 client-->
@@ -168,7 +167,7 @@
       <dependency>
         <groupId>org.hibernate.validator</groupId>
         <artifactId>hibernate-validator</artifactId>
-        <version>${version.hibernate.validator}</version>
+        <version>${version.org.hibernate.validator}</version>
       </dependency>
       <!-- -->
       <dependency>
@@ -228,7 +227,7 @@
     <profile>
       <id>run-code-coverage</id>
       <properties>
-        <jacoco.excludes></jacoco.excludes>
+        <jacoco.excludes>DRL6Lexer</jacoco.excludes>
 
         <!-- jacoco.exec.file is defined in kie-parent -->
         <!--suppress UnresolvedMavenProperty -->
