--- a/springboot/Dockerfile
+++ b/springboot/Dockerfile
@@ -6,9 +6,8 @@ COPY ./scripts/jboss-settings.xml /deployments/.m2/settings.xml
 COPY ./scripts/logging.sh /deployments/logging.sh
 COPY ./scripts/maven.sh /deployments/maven.sh
 COPY ./scripts/start.sh /deployments/start.sh
-RUN chmod 775 /deployments/logging.sh
-RUN chmod 775 /deployments/maven.sh
-RUN chmod 775 /deployments/start.sh
-RUN chmod 775 /deployments/app.jar
+RUN chmod 777 /deployments /deployments/.m2
+RUN chmod 666 /deployments/.m2/settings.xml
+RUN chmod 775 /deployments/logging.sh /deployments/maven.sh /deployments/start.sh /deployments/app.jar
 EXPOSE 8080
 CMD ["bash", "/deployments/start.sh"]
