--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -24,6 +24,11 @@
     </dependency>
     <dependency>
       <groupId>org.kie</groupId>
+      <artifactId>ha-core-infra</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.kie</groupId>
       <artifactId>ha-remote</artifactId>
       <scope>test</scope>
     </dependency>
