--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -67,9 +67,12 @@
           <groupId>commons-logging</groupId>
           <artifactId>commons-logging</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>jakarta.validation</groupId>
+          <artifactId>jakarta.validation-api</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
-
   </dependencies>
 
 
