--- a/jdkhttp/pom.xml
+++ b/jdkhttp/pom.xml
@@ -18,6 +18,10 @@
     </dependency>
     <dependency>
       <groupId>org.kie</groupId>
+      <artifactId>ha-core-infra</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.kie</groupId>
       <artifactId>sample-hacep-project-kjar</artifactId>
     </dependency>
     <dependency>
