--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
     <surefire.forkCount>1</surefire.forkCount>
     <version.javax.el>3.0.1-b08</version.javax.el>
     <version.javax.ws.rs>2.0.0.Final</version.javax.ws.rs>
-    <version.junit>4.12</version.junit>
     <version.org.apache.kafka>2.2.1</version.org.apache.kafka>
     <version.k8s.client>4.6.0</version.k8s.client>
     <version.logback.kafka.appender>0.2.0-RC2</version.logback.kafka.appender>
@@ -253,11 +252,11 @@
     <repository>
       <id>central</id>
       <name>Maven Central</name>
-      <url>http://repo.maven.apache.org/maven2</url>
+      <url>https://repo.maven.apache.org/maven2</url>
     </repository>
     <repository>
       <id>jboss</id>
-      <url>http://repository.jboss.org/nexus/content/groups/public/</url>
+      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -270,7 +269,7 @@
     <pluginRepository>
       <id>central</id>
       <name>Maven Central</name>
-      <url>http://repo.maven.apache.org/maven2</url>
+      <url>https://repo.maven.apache.org/maven2</url>
     </pluginRepository>
   </pluginRepositories>
 
