aligned jdkhttp to springboot changes

--- a/jdkhttp/kubernetes/deployment.yaml
+++ b/jdkhttp/kubernetes/deployment.yaml
@@ -18,6 +18,9 @@ spec:
         version: v1
     spec:
       serviceAccountName: openshift-kie-jdkhttp
+      securityContext:
+        runAsUser: <id_user>
+        runAsNonRoot: true
       containers:
         - env:
           name: openshift-kie-jdkhttp
