[Drools 4906] Maven configuration permissions (#69)
* moved permissions to the dockerfile

* changed home to use a rootless user home

* added permissions

* switched to https repos

* temp comit for Jiri's tests

* clean up specific values

* aligned jdkhttp to springboot changes

* removed scripts folder already present in jdkhttp and springboot

* clean test values

* removed default values, they will be described in the docs

* removed copy file

--- a/springboot/Dockerfile
+++ b/springboot/Dockerfile
@@ -1,9 +1,18 @@
 FROM registry.access.redhat.com/ubi8/ubi-minimal:latest
-RUN microdnf install java-1.8.0-openjdk-headless && microdnf clean all
-COPY target/*-springboot.jar /deployments/app.jar
-COPY ./scripts/jboss-settings.xml /root/.m2/settings.xml
-COPY ./scripts/logging.sh /deployments/logging.sh
-COPY ./scripts/maven.sh /deployments/maven.sh
-COPY ./scripts/start.sh /deployments/start.sh
+RUN microdnf install java-1.8.0-openjdk-headless && microdnf install shadow-utils && microdnf clean all
+RUN groupadd -r app -g <id_group> && useradd -u <id_user> -r -g app -m -d /app -s /sbin/nologin -c "App user" app && chmod 755 /app
+WORKDIR /home/app/deployments
+USER app
+ENV HOME /app
+COPY target/*-springboot.jar /home/app/deployments/app.jar
+COPY ./scripts/logging.sh /home/app/deployments/logging.sh
+COPY ./scripts/maven.sh /home/app/deployments/maven.sh
+COPY ./scripts/start.sh /home/app/deployments/start.sh
+COPY ./scripts/jboss-settings.xml /app/.m2/settings.xml
+USER root
+RUN chmod 777 /home/app/deployments /app/.m2
+RUN chmod 666 /app/.m2/settings.xml
+RUN chmod 775 /home/app/deployments/logging.sh /home/app/deployments/maven.sh /home/app/deployments/start.sh /home/app/deployments/app.jar
+USER app
 EXPOSE 8080
-CMD ["bash", "/deployments/start.sh"]
+CMD ["bash", "/home/app/deployments/start.sh"]
