--- a/ha-remote/pom.xml
+++ b/ha-remote/pom.xml
@@ -5,15 +5,15 @@
     <parent>
         <artifactId>openshift-kie-parent</artifactId>
         <groupId>org.kie</groupId>
-        <version>7.32.0-SNAPSHOT</version>
+        <version>7.33.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ha-remote</artifactId>
 
   <dependencies>
       <dependency>
-          <groupId>org.apache.kafka</groupId>
-          <artifactId>kafka-clients</artifactId>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
       </dependency>
       <dependency>
           <groupId>org.assertj</groupId>
