--- a/sample-hacep-project/sample-hacep-project-client/pom.xml
+++ b/sample-hacep-project/sample-hacep-project-client/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>sample-hacep-project</artifactId>
         <groupId>org.kie</groupId>
-        <version>7.32.0-SNAPSHOT</version>
+        <version>7.33.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,6 +15,10 @@
         <dependency>
             <groupId>org.kie</groupId>
             <artifactId>ha-remote</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.kie</groupId>
+            <artifactId>ha-core-infra</artifactId>
         </dependency>
         <dependency>
             <groupId>org.kie</groupId>
