--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.kie</groupId>
     <artifactId>kie-parent</artifactId>
-    <version>7.32.0-SNAPSHOT</version> <!-- change with every build -->
+    <version>7.33.0-SNAPSHOT</version> <!-- change with every build -->
   </parent>
 
   <groupId>org.kie</groupId>
@@ -37,7 +37,7 @@
     <module>springboot</module>
     <module>jdkhttp</module>
     <module>sample-hacep-project</module>
-    <module>integration</module>
+    <!--<module>integration</module>-->
     <module>distribution</module>
   </modules>
 
@@ -45,12 +45,12 @@
     <dependencies>
       <dependency>
         <groupId>org.kie</groupId>
-        <artifactId>ha-core</artifactId>
+        <artifactId>ha-remote</artifactId>
         <version>${version.org.kie}</version>
       </dependency>
       <dependency>
         <groupId>org.kie</groupId>
-        <artifactId>ha-remote</artifactId>
+        <artifactId>ha-core</artifactId>
         <version>${version.org.kie}</version>
       </dependency>
       <dependency>
@@ -68,7 +68,6 @@
         <artifactId>openshift-kie-springboot</artifactId>
         <version>${version.org.kie}</version>
       </dependency>
-
       <!-- drools -->
       <dependency>
         <groupId>org.kie</groupId>
@@ -97,7 +96,6 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-
       <!-- kafka -->
       <dependency>
         <groupId>org.apache.kafka</groupId>
@@ -121,21 +119,18 @@
         <version>${version.org.apache.kafka}</version>
         <classifier>test</classifier>
       </dependency>
-
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
         <version>${version.com.fasterxml.jackson.databind}</version>
         <scope>compile</scope>
       </dependency>
-
       <!-- fabric8 -->
       <dependency>
         <groupId>io.fabric8</groupId>
         <artifactId>kubernetes-client</artifactId>
         <version>${version.k8s.client}</version>
       </dependency>
-
       <dependency>
         <!-- Spring Boot -->
         <groupId>org.springframework.boot</groupId>
@@ -144,7 +139,6 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
@@ -156,7 +150,6 @@
           </exclusion>
         </exclusions>
       </dependency>
-
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-logging</artifactId>
@@ -176,34 +169,29 @@
         <version>${version.servlet}</version>
         <scope>provided</scope>
       </dependency>
-
       <dependency>
         <groupId>org.jboss.spec.javax.annotation</groupId>
         <artifactId>jboss-annotations-api_1.3_spec</artifactId>
         <version>${version.annotations}</version>
         <scope>compile</scope>
       </dependency>
-
       <dependency>
         <groupId>org.jboss.spec.javax.ws.rs</groupId>
         <artifactId>javax.ws.rs-api</artifactId>
         <version>${version.javax.ws.rs}</version>
         <scope>compile</scope>
       </dependency>
-
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-core</artifactId>
         <version>${version.ch.qos.logback}</version>
       </dependency>
-
       <dependency>
         <groupId>com.github.danielwegener</groupId>
         <artifactId>logback-kafka-appender</artifactId>
         <version>${version.logback.kafka.appender}</version>
         <scope>test</scope>
       </dependency>
-
       <dependency>
         <groupId>org.powermock</groupId>
         <artifactId>powermock-module-junit4</artifactId>
