--- a/sample-hacep-project/sample-hacep-project-kjar/pom.xml
+++ b/sample-hacep-project/sample-hacep-project-kjar/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>sample-hacep-project-kjar</artifactId>
 
+    <properties>
+      <generateModel>NO</generateModel>
+    </properties>
+
     <packaging>kjar</packaging>
 
     <dependencies>
