--- a/kie-remote/pom.xml
+++ b/kie-remote/pom.xml
@@ -13,6 +13,10 @@
 
   <dependencies>
       <dependency>
+          <groupId>org.apache.kafka</groupId>
+          <artifactId>kafka-clients</artifactId>
+      </dependency>
+      <dependency>
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-api</artifactId>
       </dependency>
